<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiNombreU"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#000000"
                app:boxStrokeColor="#FE9166"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:hintTextColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constUpdate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombreU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nombre"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiApellidosU"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#000000"
                app:boxStrokeColor="#FE9166"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:hintTextColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiNombreU">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etApellidosU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_apellidos"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiTelefonoU"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColorHint="#000000"
                app:boxStrokeColor="#FE9166"
                app:counterEnabled="true"
                app:counterMaxLength="9"
                app:hintTextColor="#000000"
                app:layout_constraintEnd_toStartOf="@+id/btEditarDatosUpdate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiApellidosU">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTelefonoU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_telefono"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiFechaNacimientoU"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColorHint="#000000"
                app:boxStrokeColor="#FE9166"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:hintTextColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btEditarDatosUpdate"
                app:layout_constraintTop_toBottomOf="@+id/tiApellidosU">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFechaNacimientoU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fechaNac"
                    android:inputType="number|text"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLocalidadU"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#000000"
                app:boxStrokeColor="#FE9166"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:hintTextColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiFechaNacimientoU">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLocalidadU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_localidad"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiCalleU"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColorHint="#000000"
                app:boxStrokeColor="#FE9166"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:hintTextColor="#000000"
                app:layout_constraintEnd_toStartOf="@+id/btEditarDatosUpdate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiLocalidadU">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCalleU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_calle"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiNumeroU"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColorHint="#000000"
                app:boxStrokeColor="#FE9166"
                app:counterEnabled="true"
                app:counterMaxLength="3"
                app:hintTextColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btEditarDatosUpdate"
                app:layout_constraintTop_toBottomOf="@+id/tiLocalidadU">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNumeroU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_numero"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btEditarDatosUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/boton_redondeado"
                android:backgroundTint="@color/gris"
                android:contentDescription="@string/cont_mainadd"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiNumeroU" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bgtop"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_ola"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <TextView
        android:id="@+id/tvEditarExistente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/caviarbold"
        android:text="@string/tv_editarContacto"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <ImageButton
        android:id="@+id/btAtrasDatosUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/boton_redondeado"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/cont_atras"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

</androidx.constraintlayout.widget.ConstraintLayout>